Add support for windows & Downgrade JDK to 1.8